@@ -1808,13 +1808,15 @@ name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
-comment|// Now close the region, split the log, reopen the region and assert that
-comment|// replay of log has no effect, that our seqids are calculated correctly so
+comment|// Now close the region (without flush), split the log, reopen the region and assert that
+comment|// replay of log has the correct effect, that our seqids are calculated correctly so
 comment|// all edits in logs are seen as 'stale'/old.
 name|region
 operator|.
 name|close
-argument_list|()
+argument_list|(
+literal|true
+argument_list|)
 expr_stmt|;
 name|wal
 operator|.
@@ -1862,38 +1864,6 @@ name|htd
 argument_list|,
 literal|null
 argument_list|)
-block|{
-annotation|@
-name|Override
-specifier|protected
-name|boolean
-name|restoreEdit
-parameter_list|(
-name|Store
-name|s
-parameter_list|,
-name|KeyValue
-name|kv
-parameter_list|)
-block|{
-name|super
-operator|.
-name|restoreEdit
-argument_list|(
-name|s
-argument_list|,
-name|kv
-argument_list|)
-expr_stmt|;
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-literal|"Called when it should not have been!"
-argument_list|)
-throw|;
-block|}
-block|}
 decl_stmt|;
 name|long
 name|seqid2
@@ -1921,6 +1891,32 @@ name|size
 argument_list|()
 operator|<
 name|seqid2
+argument_list|)
+expr_stmt|;
+specifier|final
+name|Result
+name|result1b
+init|=
+name|region2
+operator|.
+name|get
+argument_list|(
+name|g
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|result
+operator|.
+name|size
+argument_list|()
+argument_list|,
+name|result1b
+operator|.
+name|size
+argument_list|()
 argument_list|)
 expr_stmt|;
 comment|// Next test.  Add more edits, then 'crash' this region by stealing its wal
@@ -2213,6 +2209,408 @@ literal|null
 return|;
 block|}
 block|}
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Test that we recover correctly when there is a failure in between the    * flushes. i.e. Some stores got flushed but others did not.    *    * Unfortunately, there is no easy hook to flush at a store level. The way    * we get around this is by flushing at the region level, and then deleting    * the recently flushed store file for one of the Stores. This would put us    * back in the situation where all but that store got flushed and the region    * died.    *    * We restart Region again, and verify that the edits were replayed.    *    * @throws IOException    * @throws IllegalAccessException    * @throws NoSuchFieldException    * @throws IllegalArgumentException    * @throws SecurityException    */
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testReplayEditsAfterPartialFlush
+parameter_list|()
+throws|throws
+name|IOException
+throws|,
+name|SecurityException
+throws|,
+name|IllegalArgumentException
+throws|,
+name|NoSuchFieldException
+throws|,
+name|IllegalAccessException
+throws|,
+name|InterruptedException
+block|{
+specifier|final
+name|String
+name|tableNameStr
+init|=
+literal|"testReplayEditsWrittenViaHRegion"
+decl_stmt|;
+specifier|final
+name|HRegionInfo
+name|hri
+init|=
+name|createBasic3FamilyHRegionInfo
+argument_list|(
+name|tableNameStr
+argument_list|)
+decl_stmt|;
+specifier|final
+name|Path
+name|basedir
+init|=
+operator|new
+name|Path
+argument_list|(
+name|this
+operator|.
+name|hbaseRootDir
+argument_list|,
+name|tableNameStr
+argument_list|)
+decl_stmt|;
+name|deleteDir
+argument_list|(
+name|basedir
+argument_list|)
+expr_stmt|;
+specifier|final
+name|byte
+index|[]
+name|rowName
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+name|tableNameStr
+argument_list|)
+decl_stmt|;
+specifier|final
+name|int
+name|countPerFamily
+init|=
+literal|10
+decl_stmt|;
+specifier|final
+name|HTableDescriptor
+name|htd
+init|=
+name|createBasic3FamilyHTD
+argument_list|(
+name|tableNameStr
+argument_list|)
+decl_stmt|;
+name|HRegion
+name|region3
+init|=
+name|HRegion
+operator|.
+name|createHRegion
+argument_list|(
+name|hri
+argument_list|,
+name|hbaseRootDir
+argument_list|,
+name|this
+operator|.
+name|conf
+argument_list|,
+name|htd
+argument_list|)
+decl_stmt|;
+comment|// Write countPerFamily edits into the three families.  Do a flush on one
+comment|// of the families during the load of edits so its seqid is not same as
+comment|// others to test we do right thing when different seqids.
+name|HLog
+name|wal
+init|=
+name|createWAL
+argument_list|(
+name|this
+operator|.
+name|conf
+argument_list|)
+decl_stmt|;
+name|HRegion
+name|region
+init|=
+operator|new
+name|HRegion
+argument_list|(
+name|basedir
+argument_list|,
+name|wal
+argument_list|,
+name|this
+operator|.
+name|fs
+argument_list|,
+name|this
+operator|.
+name|conf
+argument_list|,
+name|hri
+argument_list|,
+name|htd
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|long
+name|seqid
+init|=
+name|region
+operator|.
+name|initialize
+argument_list|()
+decl_stmt|;
+comment|// HRegionServer usually does this. It knows the largest seqid across all regions.
+name|wal
+operator|.
+name|setSequenceNumber
+argument_list|(
+name|seqid
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|HColumnDescriptor
+name|hcd
+range|:
+name|htd
+operator|.
+name|getFamilies
+argument_list|()
+control|)
+block|{
+name|addRegionEdits
+argument_list|(
+name|rowName
+argument_list|,
+name|hcd
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|countPerFamily
+argument_list|,
+name|this
+operator|.
+name|ee
+argument_list|,
+name|region
+argument_list|,
+literal|"x"
+argument_list|)
+expr_stmt|;
+block|}
+comment|// Now assert edits made it in.
+specifier|final
+name|Get
+name|g
+init|=
+operator|new
+name|Get
+argument_list|(
+name|rowName
+argument_list|)
+decl_stmt|;
+name|Result
+name|result
+init|=
+name|region
+operator|.
+name|get
+argument_list|(
+name|g
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|countPerFamily
+operator|*
+name|htd
+operator|.
+name|getFamilies
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|,
+name|result
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Let us flush the region
+name|region
+operator|.
+name|flushcache
+argument_list|()
+expr_stmt|;
+name|region
+operator|.
+name|close
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|wal
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// delete the store files in the second column family to simulate a failure
+comment|// in between the flushcache();
+comment|// we have 3 families. killing the middle one ensures that taking the maximum
+comment|// will make us fail.
+name|int
+name|cf_count
+init|=
+literal|0
+decl_stmt|;
+for|for
+control|(
+name|HColumnDescriptor
+name|hcd
+range|:
+name|htd
+operator|.
+name|getFamilies
+argument_list|()
+control|)
+block|{
+name|cf_count
+operator|++
+expr_stmt|;
+if|if
+condition|(
+name|cf_count
+operator|==
+literal|2
+condition|)
+block|{
+name|this
+operator|.
+name|fs
+operator|.
+name|delete
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+name|region
+operator|.
+name|getRegionDir
+argument_list|()
+argument_list|,
+name|Bytes
+operator|.
+name|toString
+argument_list|(
+name|hcd
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+argument_list|)
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+comment|// Let us try to split and recover
+name|runWALSplit
+argument_list|(
+name|this
+operator|.
+name|conf
+argument_list|)
+expr_stmt|;
+name|HLog
+name|wal2
+init|=
+name|createWAL
+argument_list|(
+name|this
+operator|.
+name|conf
+argument_list|)
+decl_stmt|;
+name|HRegion
+name|region2
+init|=
+operator|new
+name|HRegion
+argument_list|(
+name|basedir
+argument_list|,
+name|wal2
+argument_list|,
+name|this
+operator|.
+name|fs
+argument_list|,
+name|this
+operator|.
+name|conf
+argument_list|,
+name|hri
+argument_list|,
+name|htd
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|long
+name|seqid2
+init|=
+name|region2
+operator|.
+name|initialize
+argument_list|()
+decl_stmt|;
+comment|// HRegionServer usually does this. It knows the largest seqid across all regions.
+name|wal2
+operator|.
+name|setSequenceNumber
+argument_list|(
+name|seqid2
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|seqid
+operator|+
+name|result
+operator|.
+name|size
+argument_list|()
+operator|<
+name|seqid2
+argument_list|)
+expr_stmt|;
+specifier|final
+name|Result
+name|result1b
+init|=
+name|region2
+operator|.
+name|get
+argument_list|(
+name|g
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|result
+operator|.
+name|size
+argument_list|()
+argument_list|,
+name|result1b
+operator|.
+name|size
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
