@@ -403,6 +403,7 @@ Release 0.92.0 - Unreleased
    HBASE-4670  Fix javadoc warnings
    HBASE-4367  Deadlock in MemStore flusher due to JDK internally synchronizing
                on current thread
+   HBASE-4645  Edits Log recovery losing data across column families
 
   TESTS
    HBASE-4450  test for number of blocks read: to serve as baseline for expected
